[package]
name = "clutch-wallet-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "clutch_wallet_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "gen_abi"
path = "src/bin/gen_abi.rs"

[dependencies]
ethers = "2.0.4"
ethers-solc = "2.0.4"
serde_json = "1.0.96"
serde = "1.0.160"
tokio = { version = "1.28.0", features = ["full"] }
hex = "0.4.3"
async-recursion = "1.0.4"
eyre = "0.6.8"
httpmock = "0.6.7"
once_cell = "1.17.1"
serde_tuple = "0.5.0"

[dev-dependencies]
expectest = "0.12.0"
